# InfraLock

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json
Rust-Service/src/: main.rs
Rust-Service/src/models/: mod.rs
Rust-Service/src/services/: lookup_service.rs  tor_detection.rs
Rust-Service/src/utils/: http_client.rs
Web-Api/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
Web-Api/prisma/: schema.prisma
Web-Api/src/: app.js  app.ts
Web-Api/src/controllers/: userController.ts
Web-Api/src/errors/: Conflict.ts  Unauthorized.ts  UnprocessableContent.ts  validation.ts
Web-Api/src/middleware/: auth.ts
Web-Api/src/middlewares/: auth.ts  globalErrorHandler.ts
Web-Api/src/routes/: user.ts
Web-Api/src/services/: userService.ts
Web-Api/src/types/: problemDetails.ts
Web-Api/src/utils/: authUtils.ts
backend/: .env.example  README.md  package-lock.json  tsconfig.json
backend/docs/: prisma-setup.md  redis.md
backend/prisma/: schema.prisma
backend/src/: app.ts  test-db.ts
backend/src/controllers/: lookupController.ts
backend/src/errors/: Unauthorized.ts
backend/src/middleware/: apiKeyAuth.ts  auth.ts  globalErrorHandler.ts  ipExtraction.ts
backend/src/routes/: lookup.ts  (+1 more)
data/ip_ranges/: tor_exit_node_check.torproject.org_exit-addresses.txt
data/vpns/: ipv4.txt
docs/: API_KEY_VALIDATION.md  radix_trees.md
docs/ip-lookups/: overview.md  rust-service.md  web-api.md  web-frontend.md
rust-service/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
rust-service/src/: main.rs
sdk/: .gitignore  .npmignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
sdk/docs/: api.md  configuration.md  error-handling.md  getting-started.md
sdk/src/: client.ts  index.ts
src/: config.rs  error.rs  handlers.rs  main.rs  proxy_detection.rs  routes.rs  vpn_detection.rs
src/config/: mod.rs
src/errors/: mod.rs
src/handlers/: mod.rs
src/ip_lookup/: mod.rs  service.rs  tree.rs
src/models/: location.rs  threat_score.rs
src/routes/: mod.rs
src/services/: background_updater.rs  lookup_service.rs  mod.rs  response_action.rs  vpn_detection.rs
src/tests/: api_tests.rs
src/types/: location_types.rs  mod.rs
src/utils/: file_ops.rs  http_client.rs  mod.rs  retreive_ip.rs
web-api/: .dockerignore  .env.example  Dockerfile  README.md  nodemon.json  package-lock.json  package.json
web-api/prisma/: schema.prisma
web-api/scripts/: test-auth-flow.ts
web-api/src/: app.ts  prisma.ts
web-frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
web-frontend/interfaces/: ApiInterfaces.ts  UserInterfaces.ts
web-frontend/src/: middleware.ts
(+92 files in other folders)
