[package]
name = "geolocation"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
config = "0.15.12"
maxminddb = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
ipnetwork = "0.20"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
tempfile = "3.20.0"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dashmap = "6.1.0"

[dev-dependencies]
tower-test = "0.4"
http = "0.2"
tower = { version = "0.4", features = ["util"] }
