[package]
name = "geolocation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dotenv = "0.15"
env_logger = "0.11.8"
filetime = "0.2.25"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
http = "1.0"
http-body = "1.0"
ip_network = "0.4"
ip_network_table = "0.2"
ipnetwork = "0.21.1"
lazy_static = "1.4"
log = "0.4"
maxminddb = { version = "0.26", features = ["mmap"] }
once_cell = "1.21.3"
parking_lot = "0.12"
percent-encoding = "2.3.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
url = "2.3"

[dev-dependencies]
axum-test = { version = "18.0.0-rc3" }
rstest = "0.17"
tokio-test = "0.4"
